style the horizontal scroll and fixed drop down background

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -60,11 +60,13 @@
 .profile-dropdown {
   border: 1px solid rgb(168, 165, 165);
   border-radius: 2px;
-  position: fixed;
- transform: translateX(-50%);
- list-style: none;
- padding: 5px;
- background-color: #ffffff;
+  position: absolute;
+  transform: translateX(-50%);
+  list-style: none;
+  padding: 5px;
+  background-color: #ffffff;
+  opacity: 1;
+  z-index: 1000;
  /* padding-right: 25px; */
  padding-bottom: 20px;
 }
@@ -79,7 +81,7 @@ border: none;
 background-color:rgba(255, 255, 255, 0);
 font-size: 18px;
 padding: 0;
-padding-right: 15px;
+padding-right: 60px;
 padding-top: 5px;
 outline: none;
 }
